@@ -213,7 +213,10 @@ if (session_loggedin()) {
 		echo $GLOBALS['HTML']->listTableBottom();
 		?>
 	</td><tr>
-
+	<?php
+		$hookParams['artifact_id']=$aid;
+		plugin_hook("artifact_extra_detail",$hookParams);
+	?>
 	<tr><td colspan="2">
 		<h4><?php echo $Language->getText('tracker_mod','changelog') ?>:</h4>
 		<?php 
