@@ -1,8 +1,10 @@
-2004-07-15  Christian Bayle <bayle@aist.enst.fr>
+2004-07-20  Christian Bayle <bayle@aist.enst.fr>
 
 	* reorganisation of submenu with intensive use of $HTML->subMenu()
 	* change way of dealing with login error, not using a string
 	comparison in $feedback, but a proper userstatus global
+	* Applied kikov patch to add 3 hooks in
+	www/tracker/[detail.php mod-limited.php mod.php] (closes patch#842)
 
 2004-07-07  Tom Copeland <tom@infoether.com>
 
